# BYTETrack

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
include/: BYTETracker.h  STrack.h  dataType.h
src/: BYTETracker.cpp  PyBYTETrack.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
src/bytetrack/: __init__.py  __init__.pyi
